--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -15,14 +15,19 @@ body {
 }
 h2 {
     color: #fff;
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 300;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 15px;
 }
 p.desc {
-    font-size: 2rem;
+    display: block;
+    width: 65%;
+    margin: 10px auto;
+    font-size: 1.2rem;
     font-weight: 300;
     color: $pGrey;
     text-align: center;
+    position: relative;
 }
