--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,7 @@
 @import 'utils';
 @import 'typography';
 @import 'components/header';
+@import 'components/home';
 @import 'components/about';
 @import 'components/footer';
 
