finished up to projects partial

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,5 +4,7 @@
 @import 'components/header';
 @import 'components/home';
 @import 'components/about';
+@import 'components/skills';
+@import 'components/projects';
 @import 'components/footer';
 
