--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -25,6 +25,7 @@ $teamGrey: #2A2A2A;
     max-width: 1170;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
 }
 
 .buttonWhite {
