--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -5,16 +5,16 @@ section#about {
         flex-direction: column;
         .desc::after {
             content: "";
-            width: 170px;
-            border-bottom: 2px solid $pGrey;
+            width: 102px;
+            border-bottom: 1px solid $pGrey;
             height: 10px;
             position: absolute;
-            left: 40%;
-            bottom: -36px;
+            left: 37%;
+            bottom: -30px;
         }
         .iconBlockContainer {
             display: flex;
-            margin-top: 87px; /* 1% */
+            margin-top: 60px; 
             justify-content: space-between; 
             .iconBlock {
                 width: 32%;
@@ -23,22 +23,22 @@ section#about {
                 .iconImg {
                     width: 30%;
                     margin: 0 auto;
-                    padding-top: 70px;
+                    padding-top: 50px;
                     img {
                         width: 100%;
                     }
                 }
                 h4 {
                     color: #fff;
-                    font-size: 2.4rem;
+                    font-size: 1.45rem;
                     font-weight: 700;
                     margin-bottom: 0;
                 }
                 p {
-                    font-size: 1.6rem;
+                    font-size: 1rem;
                     font-weight: 300;
                     color: $pGrey;
-                    line-height: 24px;
+                    line-height: 1.5;
                     padding: 0 10%;
                     margin-bottom: 15%;
                 }
