--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -1,11 +1,14 @@
 section#home {
     background: linear-gradient(90deg, $backYellow 50%, $backYellowDark 50%);
 }
+#home .wrapper {
+    flex-direction: row;
+}
 .homeLeft {
     width: 50%;
     position: relative;
     h1 {
-        margin-top: 125px;
+        margin-top: 110px;
         margin-bottom: 40px;
         font-size: 4.8rem;
         text-transform: uppercase;
@@ -27,7 +30,7 @@ section#home {
         margin-bottom: 45px;
     }
     .buttonWhite {
-        margin-bottom: 200px;
+        margin-bottom: 110px;
     }
 }
 .homeLeft::after {
@@ -48,7 +51,7 @@ section#home {
     .homeImgContainer {
         position: absolute;
         width: 486px;
-        top: 27%;
+        top: 29%;
         left: -24%;
         img {
             width: 100%;
