modifications and team section

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -16,7 +16,14 @@ $underYellow: #F7CD69;
 $underRed: #FA7072;
 $underGreen: #A8CF69;
 $teamGrey: #2A2A2A;
-
+//icon color variables
+$colorTwitter: #1DACEA;
+$colorGoogle: #C84238;
+$colorFb: #507DBB;
+$colorFlickr: #F91684;
+$colorLinkd: #0D6498;
+$colorPin: #CB1D23;
+$colorDrib: #F26999;
 
 
 //GLOBAL STYLES
