--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,5 +6,6 @@
 @import 'components/about';
 @import 'components/skills';
 @import 'components/projects';
+@import 'components/team';
 @import 'components/footer';
 
