--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,5 +7,6 @@
 @import 'components/skills';
 @import 'components/projects';
 @import 'components/team';
+@import 'components/portfolio';
 @import 'components/footer';
 
