added blog section

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -29,7 +29,7 @@ $colorDrib: #F26999;
 //GLOBAL STYLES
 .wrapper {
     width: 61%;
-    max-width: 1170;
+    max-width: 691.2px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
