--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,5 +8,6 @@
 @import 'components/projects';
 @import 'components/team';
 @import 'components/portfolio';
+@import 'components/blog';
 @import 'components/footer';
 
