--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,5 +9,7 @@
 @import 'components/team';
 @import 'components/portfolio';
 @import 'components/blog';
+@import 'components/location';
+@import 'components/contact';
 @import 'components/footer';
 
