--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -19,7 +19,8 @@ h2 {
     font-weight: 300;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 0;
+    padding-top: 15px;
 }
 p.desc {
     display: block;
@@ -27,7 +28,17 @@ p.desc {
     margin: 10px auto;
     font-size: 1.2rem;
     font-weight: 300;
+    line-height: 1.5;
     color: $pGrey;
     text-align: center;
     position: relative;
+}
+.desc::after {
+    content: "";
+    width: 100px;
+    border-bottom: 1px solid $pGrey;
+    height: 10px;
+    position: absolute;
+    left: calc(50% - 50px);
+    bottom: -25px;
 }
