--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -46,3 +46,16 @@ section#about {
         }
     }
 }
+//media query for large screen size including PSD specifications
+@media (min-width: 1280px) and (max-width: 1920px) {
+    section#about .wrapper .iconBlockContainer .iconBlock {
+        margin-bottom: 20px;
+        h4 {
+            font-size: 2.4rem;
+        }
+        p {
+            font-size: 1.6rem;
+            margin-bottom: 10%;
+        }
+    }
+}
