--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -7,7 +7,8 @@
         flex-flow: row wrap;
         justify-content: space-between;
         .footerFourth {
-            flex-basis: 165px;
+            width: calc(25% - 15px);
+            margin: 0 5px;
             h4 {
                 margin: 10px 0;
                 font-size: 1.5rem;
@@ -22,7 +23,15 @@
                 margin: 0;
             }
             img {
-                width: 100%;   
+                width: 100%;
+            }
+            .imgHolder {
+                width: 40%;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;   
+                }
             }
             .postPreview {
                 display: flex;
@@ -79,5 +88,28 @@
     a {
         color: #fff;
         text-decoration: none;
+    }
+}
+//media query for large screens including PSD specficications
+@media (min-width: 1280px) and (max-width: 1920px) {
+    .footerTop .footerContainer {
+        .footerFourth {
+            width: calc(25% - 15px);
+            h4 {
+                font-size: 2.4rem;
+            }
+            p {
+                font-size: 1.6rem;
+            }
+            form {
+                input[type=email], 
+                input[type=submit] {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    } 
+    .footerCopy {
+        font-size: 1.3rem;
     }
 }
