--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -81,8 +81,9 @@ header {
             }
         }
         .headerNav {
-            margin: 0 auto;
             width: 60%;
+            margin: 0 auto;
+            justify-content: center;
             ul {
                 padding: 10px 0;
                 margin: 0;
@@ -91,5 +92,11 @@ header {
                 }
             }
         }
+    }
+}
+@media (max-width: 480px) {
+    .wrapHeader .headerNav {
+        justify-content: center;
+        flex-wrap: wrap;
     }
 }
